# mini-crm

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py
app/models/: __init__.py  appeal.py  lead.py  operator.py  operator_weight.py  source.py
app/repositories/: __init__.py  appeal.py  lead.py  operator.py  source.py
app/routes/: __init__.py  appeals.py  operators.py  sources.py  stats.py
app/schemas/: __init__.py  appeal.py  operator.py  source.py
app/services/: __init__.py  appeal.py  distribution.py
migrations/: env.py
migrations/versions/: 091e70a276bb_create_table_operator_weights.py  2df301473f74_create_table_operators.py  44c2fc6f4efe_create_table_leads.py  5e7a3b684784_create_table_sources.py  db188061026c_create_table_appeals.py
tests/: conftest.py  test_models.py  test_repositories.py  test_routes.py  test_services.py
