[tool.poetry]
name = "mini-crm"
version = "0.1.0"
description = ""
authors = ["baktiyar <baktiarzaksylykov22@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
sqlalchemy = "^2.0.44"
fastapi = "^0.123.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic-settings = "^2.12.0"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
